@@ -51,6 +51,7 @@ version <next>:
 - ffmpeg -force_key_frames option added
 - demuxer for receiving raw rtp:// URLs without an SDP description
 - single stream LATM/LOAS decoder
+- setpts filter added
 
 
 version 0.6:
